# wifi-wonders

./: .gitignore  CMakeLists.txt  README.md  app_proxy.cpp  app_proxy.h  application.qrc  clear_config.sh  main.cpp
html-ui/: index.html
html-ui/res/css/: style.css
html-ui/res/js/: script.js
screen-casting-service/: CMakeLists.txt  Makefile  README.md  casting_service.cpp  casting_service.h  cmake_install.cmake  libav_wrapper.cpp  libav_wrapper.h  main.cpp  monitor.cpp  monitor.h  monitor_service.cpp  monitor_service.h
wpa-supplicant-manager/: CMakeLists.txt  Makefile  P2PEvent.h  README.md  cmake_install.cmake  main.cpp  utils.hpp  wpa_supplicant_manager.cpp  wpa_supplicant_manager.h
wpa-supplicant-manager/WpaSupplicantProxy/: CMakeLists.txt  Makefile  cmake_install.cmake
wpa-supplicant-manager/WpaSupplicantProxy/include/: WpaSupplicantGroupProxy.h  WpaSupplicantInterfaceProxy.h  WpaSupplicantPeerProxy.h  WpaSupplicantProxy.h  fi_w1_wpa_supplicant1Proxy.h  fi_w1_wpa_supplicant1_GroupProxy.h  fi_w1_wpa_supplicant1_InterfaceProxy.h  fi_w1_wpa_supplicant1_Interface_P2PDeviceProxy.h  fi_w1_wpa_supplicant1_Interface_WPSProxy.h  fi_w1_wpa_supplicant1_PeerProxy.h
wpa-supplicant-manager/WpaSupplicantProxy/src/: WpaSupplicantGroupProxy.cpp  WpaSupplicantInterfaceProxy.cpp  WpaSupplicantPeerProxy.cpp  WpaSupplicantProxy.cpp  fi_w1_wpa_supplicant1Proxy.cpp  fi_w1_wpa_supplicant1_GroupProxy.cpp  fi_w1_wpa_supplicant1_InterfaceProxy.cpp  fi_w1_wpa_supplicant1_Interface_P2PDeviceProxy.cpp  fi_w1_wpa_supplicant1_Interface_WPSProxy.cpp  fi_w1_wpa_supplicant1_PeerProxy.cpp
wpa-supplicant-manager/conf_files/: udhcpd.conf  wpa_supplicant.conf
